# threadSafeLogger

./: .gitignore  CMakeLists.txt
example/example1/: CMakeLists.txt
example/example1/src/: main.cpp
include/: logger.hpp
src/: logger.cpp
test/: info.txt
